[ADD] Add sendEther dapp

--- a/dsa2020-ctf-blockchain-ej1/index.html
+++ b/dsa2020-ctf-blockchain-ej1/index.html
@@ -35,6 +35,7 @@
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link active" href="index.html">Home</a>
           <a class="nav-link" href="instrucciones.html">Instrucciones</a>
+          <a class="nav-link" href="sendEth.html">Send Ether</a>
         </nav>
       </div>
     </header>
